--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
             </div>
 
             <div class="btn-box">
-                <a href="https://drive.google.com/drive/folders/1VN3N5qCTy7Nx7sXDAJY88MZz4nYzQ4GP?usp=sharing" class="btn">Download CV</a>
-                <a href="https://www.linkedin.com/in/charles-nebo-213803239/" class="btn">Hire Me Now</a>
+                <a href="https://drive.google.com/drive/folders/12nfVR7qFQgl4oylVLLKNKg6R_NSRyfOH?usp=share_linkF" class="btn">Download CV</a>
+                <a href="https://linkedin.com/in/charlesnebo/" class="btn">Hire Me Now</a>
             </div>
             <div class="social-icons">
                 <a href="ttps://www.facebook.com/charles.nebo/"><i class='bx bxl-facebook'></i></a>
