Integrated Formspree with contact form

--- a/index.html
+++ b/index.html
@@ -666,7 +666,7 @@
         <h2>Contact Me</h2>
     </div>
 
-    <form action="submit_form.php" method="post" class="scroll-bottom">
+    <form action="https://formspree.io/f/xovjlakk" method="POST" class="scroll-bottom">
         <input type="text" name="name" placeholder="Your Name" required>
         <input type="email" name="email" placeholder="Your Email" required>
         <input type="text" name="address" placeholder="Your Address">
@@ -676,6 +676,7 @@
             <button type="submit" class="btn">Send Message</button>
         </div>
     </form>
+    
 </section>
 
         
