Added gotcha filed in the formspree field

--- a/index.html
+++ b/index.html
@@ -667,6 +667,7 @@
     </div>
 
     <form action="https://formspree.io/f/xovjlakk" method="POST" class="scroll-bottom">
+        <input type="text" name="_gotcha" style="display:none">
         <input type="text" name="name" placeholder="Your Name" required>
         <input type="email" name="email" placeholder="Your Email" required>
         <input type="text" name="address" placeholder="Your Address">
@@ -676,6 +677,7 @@
             <button type="submit" class="btn">Send Message</button>
         </div>
     </form>
+    
     
 </section>
 
